# backend/routes/BookRoutes.js
@@ -1,5 +1,7 @@
 const express = require("express");
 const router = express.Router();
+const multer  = require('multer')
+const upload = multer({ dest: '/tmp/' })
 
 const {
     getBooks,
@@ -10,13 +12,15 @@ const {
 } = require("../controllers/BooksController")
 
 
-
-
 router.route("/").get(getBooks)
 
 router.route("/:id").get(getBook)
 
-router.route("/").post(createBook)
+router.route("/").post(upload.fields([
+    { name: 'cover_image', maxCount: 1 },
+    { name: 'pdf_file', maxCount: 1 },
+    { name: 'epub_file', maxCount: 1 }
+  ]),createBook)
 
 // router.route("/:id").post(updateBook)
 // router.route("/:id").delete(deleteBook)
